Modified feature: add update role