@@ -1,8 +1,6 @@
 package com.eefood.iamservice.config;
 
-import java.util.Collection;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 import java.util.stream.Collectors;
 import org.springframework.core.convert.converter.Converter;
 import org.springframework.security.core.GrantedAuthority;
@@ -11,18 +9,38 @@ import org.springframework.security.oauth2.jwt.Jwt;
 
 public class CustomAuthoritiesConverter implements Converter<Jwt, Collection<GrantedAuthority>> {
   private final String REALM_ACCESS = "realm_access";
+  private final String RESOURCE_ACCESS = "resource_access";
   private final String ROLE_PREFIX = "ROLE_";
-
   @Override
-  public Collection<GrantedAuthority> convert(Jwt source) {
-    Map<String, Object> realmAccessMap = source.getClaimAsMap(REALM_ACCESS);
-    Object roles = realmAccessMap.get("roles");
-    if (roles instanceof List stringRoles) {
-      return ((List<String>) stringRoles)
-        .stream()
-        .map(s -> new SimpleGrantedAuthority(String.format("%s%s", ROLE_PREFIX, s)))
-        .collect(Collectors.toList());
+  public Collection<GrantedAuthority> convert(Jwt jwt) {
+    Collection<GrantedAuthority> authorities = new ArrayList<>();
+
+    Map<String, Object> realmAccess = jwt.getClaim(REALM_ACCESS);
+    if (realmAccess != null && realmAccess.containsKey("roles")) {
+      List<String> roles = (List<String>) realmAccess.get("roles");
+      authorities.addAll(
+              roles.stream()
+                      .map(role -> new SimpleGrantedAuthority(ROLE_PREFIX + role.toUpperCase()))
+                      .toList()
+      );
     }
-    return List.of();
+
+    // lấy client roles nếu cần
+    Map<String, Object> resourceAccess = jwt.getClaim(RESOURCE_ACCESS);
+    if (resourceAccess != null) {
+      resourceAccess.values().forEach(obj -> {
+        Map<String, Object> client = (Map<String, Object>) obj;
+        List<String> roles = (List<String>) client.get("roles");
+        if (roles != null) {
+          authorities.addAll(
+                  roles.stream()
+                          .map(role -> new SimpleGrantedAuthority(ROLE_PREFIX + role.toUpperCase()))
+                          .toList()
+          );
+        }
+      });
+    }
+
+    return authorities;
   }
 }
